Progress bar broken for OS upgrades
Currently my OS upgrade (from Fedora 29 -> Fedora 30 prerelease) is 31% downloaded, according to pkmon. But the progress bar shows 0% completed:
The download seems to be going fine, according to pkmon, but the lack of progress in the progress bar makes it looks like the upgrade has stalled or failed.