packagekit: Fix progress marshalling for upgrade_download and refresh

The new GsPackageKitHelper class introduced in mega-commit 37103e6 only
handled progress marshalling when downloading a list of packages, but
not when the PK transaction is one big monolithic operation that only
has a single GsApp associated, such as when downloading all of the
distro upgrades, or when refreshing the cache.

This commit adds a way to explicitly add a GsApp to GsPackageKitHelper
to use for marshalling progress in these cases.

Fixes: https://gitlab.gnome.org/GNOME/gnome-software/issues/620